cleaned code + fixed whitespaces

--- a/assets/css/samples.css
+++ b/assets/css/samples.css
@@ -74,9 +74,6 @@
 
 
 /* INPUT RANGE FOR AUDIO LEVEL */
-*, *:before, *:after {
-  box-sizing: border-box;
-}
 
 .range-slider {
     display: inline-block;
@@ -87,6 +84,10 @@
 
 input[type=range] {
     -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    -o-appearance: none;
+    appearance: none;
     width: calc(100% - (73px));
     height: 10px;
     border-radius: 5px;
@@ -111,74 +112,82 @@ input[type=range]:active {
 }
 
 input[type=range]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: #001a33;
-  cursor: pointer;
-  -webkit-transition: background .15s ease-in-out;
-  transition: background .15s ease-in-out;
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #001a33;
+    cursor: pointer;
+    -webkit-transition: background .15s ease-in-out;
+    transition: background .15s ease-in-out;
 }
 input[type=range]::-webkit-slider-thumb:hover {
-  background: #0059b3;
+    background: #0059b3;
 }
 input[type=range]:active::-webkit-slider-thumb {
-  background: #0059b3;
+    background: #0059b3;
 }
 input[type=range]::-moz-range-thumb {
-  width: 20px;
-  height: 20px;
-  border: 0;
-  border-radius: 50%;
-  background: #001a33;
-  cursor: pointer;
-  -webkit-transition: background .15s ease-in-out;
-  transition: background .15s ease-in-out;
+    -moz-appearance: none;
+    width: 20px;
+    height: 20px;
+    border: 0;
+    border-radius: 50%;
+    background: #001a33;
+    cursor: pointer;
+    -moz-transition: background .15s ease-in-out;
+    transition: background .15s ease-in-out;
 }
 input[type=range]::-moz-range-thumb:hover {
-  background: #0059b3;
+    background: #0059b3;
 }
 input[type=range]:active::-moz-range-thumb {
-  background: #0059b3;
+    background: #0059b3;
 }
 
 input[type=range]::-ms-track {
-  width: 100%;
-  height: 12.8px;
-  cursor: pointer;
-  animate: 0.2s;
-  background: transparent;
-  border-color: transparent;
-  border-width: 39px 0;
-  color: transparent;
+    width: 100%;
+    height: 12.8px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    border-width: 39px 0;
+    color: transparent;
 }
 
 input[type=range]::-ms-fill-lower {
-  background: rgba(255,255,255,0.4);
-  border: 0px solid #000101;
-  border-radius: 50px;
-  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+    background: rgba(255,255,255,0.4);
+    border: 0px solid #000101;
+    border-radius: 50px;
+    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
 }
 
 input[type=range]::-ms-fill-upper {
-  background: rgba(255,255,255,0.4);
-  border: 0px solid #000101;
-  border-radius: 50px;
-  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+    background: rgba(255,255,255,0.4);
+    border: 0px solid #000101;
+    border-radius: 50px;
+    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
 }
 
 input[type=range]::-ms-thumb {
-  -webkit-appearance: none;
+  -ms-appearance: none;
   appearance: none;
   width: 20px;
   height: 20px;
   border-radius: 20px;
   background: #001a33;
   cursor: pointer;
-  -webkit-transition: background .15s ease-in-out;
-  transition: background .15s ease-in-out;
+    /*box-shadow: 0 0 0 3px #282d32;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    background: #fff;
+    cursor: pointer;
+    margin-top: 2px;
+    box-sizing: border-box;
+    border: 0;*/
 }
 
 input[type=range]:focus::-ms-fill-lower {
